[package]
name = "shift-clock"
version = "0.1.0"
edition = "2021"
description = "A local, language-agnostic Prefect: cron + supervise flows written in any language"

[[bin]]
name = "shift-clock"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"

[profile.dev]
opt-level = 0
